# veritas-eudr

./: .gitignore  DECISIONS.md  Dockerfile  EVIDENCE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  VALIDATE_OUTPUT.txt  main.tf  outputs.tf  variables.tf
docker/: entrypoint.sh
docs/investigations/: whisp_disagreement_walkthrough.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_functions.py
policy/: eudr_policy.yaml
scripts/: benchmark_overlap.py  export_demo_data.py  export_web_plots.py  fetch_data.sh  make_fixtures.py
sql/functions/: 00_assert_floors.sql  fn_area_hectares.sql  fn_validate_plot.sql
src/veritas_eudr/: __init__.py  cli.py  config.py  db.py  domain.py  pipeline.py
src/veritas_eudr/api/: __init__.py
src/veritas_eudr/area/: __init__.py
src/veritas_eudr/deforestation/: __init__.py
src/veritas_eudr/ingest/: __init__.py
src/veritas_eudr/obs/: __init__.py
src/veritas_eudr/risk/: __init__.py
src/veritas_eudr/validate/: __init__.py
src/veritas_eudr/whisp/: __init__.py
tests/: conftest.py  test_api.py  test_area_bounds.py  test_cli.py  test_dds.py  test_deforestation.py  test_fixtures.py  test_idempotency.py  test_ingest.py  test_migrations.py  test_obs.py  test_pipeline.py  test_replay_mutation.py  test_risk.py  test_validation.py  test_whisp.py
tests/fixtures/: README.md  manifest.json
tests/fixtures/pathology/: pathology.json
tests/fixtures/points/: coffee_points.geojson
tests/fixtures/rasters/: hansen_lossyear_aoi.tif  jrc_gfc2020_aoi.tif  worldcover_aoi.tif
tests/fixtures/submissions/: messy_submission.csv  messy_submission.geojson
tests/fixtures/whisp/: cached_pcrop.json
web/: README.md  app.js  index.html
web-demo/: next.config.ts  package-lock.json  package.json
web-demo/app/: error.tsx  globals.css  layout.tsx  page.tsx
web-demo/components/: CountUp.tsx  Reveal.tsx  ScrollProgressRail.tsx  Section.tsx  SiteFooter.tsx  ui.tsx
web-demo/components/console/: ConsoleContext.tsx  ConsoleSection.tsx  DdsCard.tsx  EvidenceLedgerViewer.tsx  PlotInspector.tsx  PlotMap.tsx  RiskLegend.tsx
web-demo/components/narrative/: AreaMathReveal.tsx  Band21CaseStudy.tsx  EvidenceLedgerSection.tsx  PipelineSection.tsx  StakesSection.tsx  WithheldDdsSection.tsx
web-demo/lib/: chapters.ts  data.ts  format.ts  mapStyle.ts  risk.ts  types.ts
web/basemap/: aoi.pmtiles
(+57 files in other folders)
